Description
Minor patch for ping.
- Demote DPRINT1s to DPRINT
- Don't exit if unable to resolve address to hostname
- Add missing newline when printing ICMPv6 reply information
- Add a resource string for if WSAStartup fails
- Use WriteConsole instead of wprintf for printing resource strings
Attachments
Issue Links
- blocks
-
CORE-12019 TRANSLATION: Russian translation update
-
- Resolved
-
- relates to
-
CORE-12032 ping: encoding problems
-
- Resolved
-