[PING] Minor fixes by Tim Crawford. Please see CORE-12022 for the list of changes.

svn path=/trunk/; revision=72831